test/langtools/tools/javac/switchnull/SwitchNullDisabled.out
SwitchNullDisabled.java:12:18: compiler.err.feature.not.supported.in.source: (compiler.misc.feature.case.null), 20, 21
1 error
